# cross-chain-verification-system

./: README.md  beefy-listener.js  package-lock.json  package.json
originator/: Cargo.toml  lib.rs
verifier/: package-lock.json  package.json
verifier/contracts/src/: CrossChainVerifier.sol  Fibonacci.sol
verifier/contracts/test/: CrossChainVerifierTest.t.sol  Fibonacci.t.sol
verifier/elf/: riscv32im-succinct-zkvm-elf
verifier/lib/: Cargo.toml
verifier/lib/src/: lib.rs
verifier/program/: Cargo.toml
verifier/program/src/: main.rs
verifier/script/: Cargo.toml
