[package]
name = "originator"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
ink_metadata = { version = "5.0", default-features = false, features = ["std"] }
scale = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
ink_storage = { version = "5.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"
crate-type = [
    "cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_metadata/std",
    "ink_storage/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
